--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,14 @@
     specific language governing permissions and limitations
     under the License.
 -->
+
+<script type="text/javascript">
+    window.onerror = function(message, url, lineNumber) {
+        alert("Error: "+message+" in "+url+" at line "+lineNumber);
+    }
+</script>
+
+
 <html>
     <head>
         <meta charset="utf-8" />
