--- a/www/pgday/index.html
+++ b/www/pgday/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE HTML>
 <html>
+<script type="text/javascript">
+    window.onerror = function(message, url, lineNumber) {
+        alert("Error: "+message+" in "+url+" at line "+lineNumber);
+    }
+</script>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
